# research-agent

./: .env  main.py  pyproject.toml
src/core/: config.py  provider.py
tests/: test_kimi_conn.py
