[project]
name = "ai-research-pipeline"
version = "0.1.0"
description = "Deep Research Pipeline with OpenClaw + Kimi 2.5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

